tests/snapshots/run_wpt_conformance__trtx_cast_int8_0D_constant_tensor_to_int32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "cast.https.any.js",
    "cast int8 0D constant tensor to int32",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: i8[] @bytes([17]);\n  }\n\n  nodes {\n    [castOutput] = cast(operand_0, label=\"\");\n  }\n\n  outputs { castOutput; }\n}\n",
        ),
    },
)
